# apkm-gest

./: .config.cfg  .config.ini  .gitignore  APKMBUILD  CMakeLists.txt  Makefile  README.md  apkm  apkm-db-tool.sh  apsm  bool  bool.c  install-security.sh  install.sh  installed_pkgs.toml  manif.toml  selp
cmake/: apkm.pc.in  apsm.pc.in  bool.pc.in
include/: apkm.h  core.h  sandbox.h  security.h  zarch.h
lib/super-app/: APKMBUILD  Makefile  app.sh  install.sh  register-super-app-sqlite.sh
lib/super-app/pkg/: install.sh  uninstall.sh
lib/super-app/pkg/usr/local/share/doc/super-app/: README
lib/super-app/src/: super-app.c
script/: compile-sh  setup-security.sh
src/: README.md  apsm.c  apsm.c.main  apsm.c.tool  auth.c  bool.c  bool.c.tool  core.c  crypto.c  db.c  download.c  main.c  monitoring.c  parallel.c  parser.c  resolver.c  sandbox.c  security.c  utils.c  zarch.c
src/aps/: apsm.c  auth.c
src/bools/: bool.c  bool.h  selp.h  selp_archive.c  selp_compress.c  selp_crypto.c  selp_decompress.c  selp_directory.c  selp_info.c  selp_list.c  selp_multi.c  selp_verify.c  signature.bool
src/get/: get.c
src/virt/: Makefile  README.md  anv  anv.c  anv.h  namesbar.c
test/: fileC.txt
test/dossier/src/lib/: lib.c
